apps/homepage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: homepage
    pod-security.kubernetes.io/warn: restricted
